databaseconfiguration.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: database
  name: database
  namespace: myproject
spec:
  ports:
  - name: 5432-tcp
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: database
    deploymentconfig: database
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: database
  name: database
  namespace: myproject
spec:
  replicas: 1
  selector:
    app: database
    deploymentconfig: database
  strategy:
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: database
        deploymentconfig: database
    spec:
      containers:
      - image: 172.30.1.1:5000/myproject/postgres
        imagePullPolicy: Always
        name: database
        ports:
        - containerPort: 5432
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  test: false
