sonarconfig.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonar
  name: sonar
  namespace: myproject
spec:
  ports:
  - name: 9000-tcp
    port: 9000
    targetPort: 9000
  selector:
    app: sonar
    deploymentconfig: sonar
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: sonar
  name: sonar
  namespace: myproject
spec:
  replicas: 1
  selector:
    app: sonar
    deploymentconfig: sonar
  strategy:
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: sonar
        deploymentconfig: sonar
    spec:
      containers:
      - image: 172.30.1.1:5000/myproject/sonar
        imagePullPolicy: Always
        name: sonar
        ports:
        - containerPort: 9000
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  test: false
