route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: backend
  name: backend
  namespace: myproject
spec:
  host: backend-myproject.127.0.0.1.nip.io
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: backend
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
      host: backend-myproject.127.0.0.1.nip.io
      routerName: router
      wildcardPolicy: None
